--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <img class="title_back" src="images/background_title.svg" alt="background_title">
             <div class="center">
                 <div class="business_card">
-                    <img class="anton" src="images/anton.jpg" alt="background_title">
+                    <img class="anton" src="images/Anton.jpg" alt="background_title">
                     <div class="card_flex">
                         <p>
                             Ходокайнен Антон Евгеньевич
